--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Cassul/btcArbitrage#readme",
   "dependencies": {
     "ccxt": "^1.10.1198",
+    "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "lodash": "^4.17.5"
